# horizon

./: CMakeLists.txt  README.md
include/horizon/: Camera.hpp  CsvExporter.hpp  CudaCheck.hpp  CudaSimulation.hpp  Math.hpp  ShaderProgram.hpp  SimulationTypes.hpp
shaders/: lensing.frag  lensing.vert  particles.frag  particles.vert
src/: CudaSimulation.cpp  main.cpp
src/cuda/: SchwarzschildKernels.cu
src/io/: CsvExporter.cpp
src/physics/: DoubleDouble.cuh  Relativity.cuh
src/render/: Camera.cpp  ShaderProgram.cpp
tests/: validation.cu
